code sau khi da them va sua xong het