@@ -3,12 +3,21 @@ package vn.ttapp.security;
 import jakarta.servlet.*;
 import jakarta.servlet.http.*;
 import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Set;
 
 public class AuthFilter implements Filter {
 
-    // Các URL cần đăng nhập mới được truy cập
-    private static final Set<String> PROTECTED_PATHS = Set.of(
+    // Đổi ở đây nếu sau này bạn đổi mapping
+    private static final String LOGIN_URL = "/auth/login";
+    private static final Set<String> PUBLIC_PATHS = Set.of(
+            LOGIN_URL,
+            "/auth/register",
+            "/auth/logout",
+            "/api/seatmap" // cho phép xem sơ đồ ghế
+    );
+    private static final Set<String> PROTECTED_PREFIXES = Set.of(
             "/seatmap",
             "/checkout",
             "/confirm-booking",
@@ -20,55 +29,44 @@ public class AuthFilter implements Filter {
     @Override
     public void doFilter(ServletRequest req, ServletResponse res, FilterChain chain)
             throws IOException, ServletException {
-
         HttpServletRequest rq = (HttpServletRequest) req;
         HttpServletResponse rp = (HttpServletResponse) res;
         HttpSession ss = rq.getSession(false);
 
-        boolean loggedIn = ss != null && ss.getAttribute("authUser") != null;
-        String uri = rq.getRequestURI();
-        String ctx = rq.getContextPath();
+        final String ctx = rq.getContextPath();     // vd: /TrainTicketBooking
+        final String uri = rq.getRequestURI();      // vd: /TrainTicketBooking/checkout
 
-        // --- Bỏ qua file tĩnh (CSS, JS, ảnh, icon) ---
+        // Bỏ qua file tĩnh
         if (uri.startsWith(ctx + "/assets/")
-                || uri.endsWith(".css")
-                || uri.endsWith(".js")
-                || uri.endsWith(".png")
-                || uri.endsWith(".jpg")
-                || uri.endsWith(".jpeg")
-                || uri.endsWith(".gif")
-                || uri.endsWith(".ico")) {
+                || uri.endsWith(".css") || uri.endsWith(".js")
+                || uri.endsWith(".png") || uri.endsWith(".jpg")
+                || uri.endsWith(".jpeg") || uri.endsWith(".gif") || uri.endsWith(".ico")) {
             chain.doFilter(req, res);
             return;
         }
 
-        // --- Bỏ qua trang đăng nhập / đăng ký ---
-        if (uri.equals(ctx + "/auth/login") || uri.equals(ctx + "/auth/register")) {
-            chain.doFilter(req, res);
-            return;
+        // Bỏ qua public paths (khớp tuyệt đối)
+        for (String p : PUBLIC_PATHS) {
+            if (uri.equals(ctx + p)) {
+                chain.doFilter(req, res);
+                return;
+            }
         }
 
-        // --- Kiểm tra các trang yêu cầu đăng nhập ---
-        boolean needsAuth = PROTECTED_PATHS.stream().anyMatch(uri::contains);
+        boolean needsAuth = PROTECTED_PREFIXES.stream().anyMatch(prefix -> uri.startsWith(ctx + prefix));
+        boolean loggedIn = ss != null && ss.getAttribute("authUser") != null;
+
         if (needsAuth && !loggedIn) {
-            // Chuyển hướng đến login, kèm query next
             String next = rq.getRequestURI();
             if (rq.getQueryString() != null) {
                 next += "?" + rq.getQueryString();
             }
-            rp.sendRedirect(ctx + "/auth/login?next=" + java.net.URLEncoder.encode(next, "UTF-8"));
+            String target = ctx + LOGIN_URL + "?next=" + URLEncoder.encode(next, StandardCharsets.UTF_8);
+            rq.getServletContext().log("[AuthFilter] Redirect -> " + target); // log để kiểm tra có /login nào xuất hiện không
+            rp.sendRedirect(target);
             return;
         }
 
-        // --- Nếu đã login hoặc trang không cần login ---
         chain.doFilter(req, res);
-    }
-
-    @Override
-    public void init(FilterConfig filterConfig) {
-    }
-
-    @Override
-    public void destroy() {
     }
 }
